--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,3 +70,8 @@ body {
   padding: 5px 10px;
   background-color: lightskyblue;
 }
+
+.linkComponent {
+  text-decoration: none;
+  color: black;
+}
